# silentradiancesimple

./: Makefile.am  README.md  configure.ac
doc/: install_notes.txt  install_notes.txtO
src/: Makefile.am  simple_emscripten_web_stream.c  simple_emscripten_web_stream.h  simple_processor.c  simple_sound_sdl.c  simple_sound_sdl.h  simple_sound_sdl2.c  simple_sr_sdl_emscripten.c
